<resources>
    <string name="app_name">Randa Quiz</string>
    <string name="heading">Welcome</string>
    <string name="category_chemistry">Chem</string>
    <string name="category_physics">Physics</string>
    <string name="category_mathematics">Maths</string>
    <string name="category_english">English</string>
    <string name="myself">"@"adolphchris19</string>
    <string name="followers">Followers</string>
    <string name="number_of_followers">108</string>
    <string name="following">Following</string>
    <string name="number_of_following">60</string>
    <string name="tweets">Tweets</string>
    <string name="number_of_tweets">90</string>
    <string name="email">adolphchris19@gmail.com</string>
    <string name="phone">(+234) 9090605708</string>
    <string name="country">Nigerian</string>
    <string name="finish">Finish</string>
    <string name="loading"> Please wait, while we set up your environment</string>
    <string name="title">Chemistry Quiz</string>
    <string name="question1">1.An Element X has 127 neutrons and 82 electrons. What is the atomic number of the element?</string>
    <string name="answer1a">45</string>
    <string name="answer1b">209</string>
    <string name="answer1c">82</string>
    <string name="answer1d">127</string>
    <string name="question2">2.An ExamPle of a strong electrolyte is?</string>
    <string name="answer2a">Sodium Formate</string>
    <string name="answer2b">Ethanol</string>
    <string name="answer2c">Ethyl</string>
    <string name="answer2d">formic acid</string>
    <string name="question3">3.What is the formation of iron III oxide in the Presence of air and moisture?</string>
    <string name="answer3a">Burning</string>
    <string name="answer3b">Rusting</string>
    <string name="answer3c">Oxidation</string>
    <string name="answer3d">Redox Reaction</string>
    <string name="question4">4.What is formed at the cathode during the electrolysis of Sodium Chloride with carbon electrolytes.</string>
    <string name="answer4a">Ammonia</string>
    <string name="answer4b">Hydrogen</string>
    <string name="answer4c">Chlorine</string>
    <string name="answer4d">Sodium Carbonate</string>
    <string name="question5">5.The nucleus of an Atom consists of?</string>
    <string name="answer5a">Gluttons</string>
    <string name="answer5b">Protons</string>
    <string name="answer5c">Electron</string>
    <string name="answer5d">Neutrons</string>
    <string name="question6">6.Sodium Chloride can be obtained from Brine by?</string>
    <string name="question7">7.What is the First and Tenth Element on the Periodic Table</string>
    <string name="answer7a">Helium</string>
    <string name="answer7b">Hydrogen</string>
    <string name="answer7c">Carbon</string>
    <string name="answer7d">Neon</string>
    <string name="question8">8.What is a substance whose atoms all have the same number of protons</string>
    <string name="question9">9.What are the two nuclear reactions that produce energy</string>
    <string name="answer9a">Nuclear Reactor</string>
    <string name="answer9b">Nuclear Fusion</string>
    <string name="answer9c">Nuclear Bomb</string>
    <string name="answer9d">Nuclear Fission</string>
    <string name="question10">10.Any substance with a PH less than 7 is called what?</string>
    <string name="ans1">The correct answer is 82</string>
    <string name="ans2">The correct answer is Sodium Formate</string>
    <string name="ans3">The correct answer is Rusting</string>
    <string name="ans4">The correct answer is Hydrogen</string>
    <string name="ans5">The correct answers are Protons and Neutrons only </string>
    <string name="ans6">The correct answer is Evaporation</string>
    <string name="ans7">The correct answers are Hydrogen and Neon only </string>
    <string name="ans8">The correct answer is Element</string>
    <string name="ans9">The correct answers are Nuclear Fission and Nuclear Fusion only </string>
    <string name="ans10"> The correct answer is Acid </string>
    <string name="titlePhysics">Physics Quiz</string>
    <string name="questionPhysics1">1.Electric resistance is typically measured in what units??</string>
    <string name="answerPhysics1a">45</string>
    <string name="answerPhysics1b">209</string>
    <string name="answerPhysics1c">Ohms</string>
    <string name="answerPhysics1d">127</string>
    <string name="questionPhysics2">2.What scientist is well known for his theory of relativity??</string>
    <string name="answerPhysics2a">Albert Einstein</string>
    <string name="answerPhysics2b">Ethanol</string>
    <string name="answerPhysics2c">Ethyl</string>
    <string name="answerPhysics2d">formic acid</string>
    <string name="questionPhysics3">3.Electric power is typically measured in what units?</string>
    <string name="answerPhysics3a">Burning</string>
    <string name="answerPhysics3b">watts</string>
    <string name="answerPhysics3c">Oxidation</string>
    <string name="answerPhysics3d">Redox Reaction</string>
    <string name="questionPhysics4">4.A magnifying glass is what type of lens?.</string>
    <string name="answerPhysics4a">concave</string>
    <string name="answerPhysics4b">convex</string>
    <string name="answerPhysics4c">Chlorine</string>
    <string name="answerPhysics4d">Sodium Carbonate</string>
    <string name="questionPhysics5">5.From the oPtions below, choose two Particles of a radioactive emissions?</string>
    <string name="answerPhysics5a">Omega Particles </string>
    <string name="answerPhysics5b">AlPha Particles</string>
    <string name="answerPhysics5c">Delta Particles</string>
    <string name="answerPhysics5d">Beta Particles</string>
    <string name="questionPhysics6">6.Conductors have a high or low resistance? Answer with either High or Low </string>
    <string name="questionPhysics7">7.From the oPtions Pick two forms of energy that you know.</string>
    <string name="answerPhysics7a">Power</string>
    <string name="answerPhysics7b">Kinetic </string>
    <string name="answerPhysics7c">Carbon</string>
    <string name="answerPhysics7d">Potential </string>
    <string name="questionPhysics8">8.A person who studies Physics is known as a?</string>
    <string name="questionPhysics9">9.What are the two nuclear reactions that produce energy</string>
    <string name="answerPhysics9a">Nuclear Reactor</string>
    <string name="answerPhysics9b">Nuclear Fusion</string>
    <string name="answerPhysics9c">Nuclear Bomb</string>
    <string name="answerPhysics9d">Nuclear Fission</string>
    <string name="questionPhysics10">10.True or false? Metal is a good conductor of heat and electricity.</string>
    <string name="ansPhysics1">The correct answer is Ohms</string>
    <string name="ansPhysics2">The correct answer is Albert Einstein</string>
    <string name="ansPhysics3">The correct answer is watts</string>
    <string name="ansPhysics4">The correct answer is Convex</string>
    <string name="ansPhysics5">The correct answers are AlPha Particles and Beta Particles </string>
    <string name="ansPhysics6">The correct answer is Low</string>
    <string name="ansPhysics7">The correct answers are Kinetic and Potential </string>
    <string name="ansPhysics8">The correct answer is Physicist</string>
    <string name="ansPhysics9">The correct answers are Nuclear Fission and Nuclear Fusion only </string>
    <string name="ansPhysics10"> The correct answer is "True" </string>
    <string name="titleMathematics">Mathematics Quiz</string>
    <string name="questionMathematics1">1.What is the sum of the angles in a right angle triangle?</string>
    <string name="answerMathematics1a">45</string>
    <string name="answerMathematics1b">180</string>
    <string name="answerMathematics1c">90</string>
    <string name="answerMathematics1d">360</string>
    <string name="questionMathematics2">2. A man has $10,000 to
        invest. He invests $4000 at 5% and $3500 at 4%.
        In order to have a yearly
        income of $500, he must invest the remainder at:</string>
    <string name="answerMathematics2a">6.4%</string>
    <string name="answerMathematics2b">6.3%</string>
    <string name="answerMathematics2c">6%</string>
    <string name="answerMathematics2d">6.1%</string>
    <string name="questionMathematics3">3.20% of 2 equals?</string>
    <string name="answerMathematics3a">4</string>
    <string name="answerMathematics3b">0.4</string>
    <string name="answerMathematics3c">0.01</string>
    <string name="answerMathematics3d">0.04</string>
    <string name="questionMathematics4">4.A school committee consists
        of 2 teachers and 4 students. The number of different committees
        that can be formed from 5 teachers and 10 students is </string>
    <string name="answerMathematics4a">310</string>
    <string name="answerMathematics4b">2100</string>
    <string name="answerMathematics4c">210</string>
    <string name="answerMathematics4d">3100</string>
    <string name="questionMathematics5">5. The sum of angle in a triangle and circle is _______ and ________ resPectively</string>
    <string name="answerMathematics5a">45</string>
    <string name="answerMathematics5b">180</string>
    <string name="answerMathematics5c">270</string>
    <string name="answerMathematics5d">360</string>
    <string name="questionMathematics6">6.The exam scores of all 500
        students were recorded and it was determined that
        these scores were normally distributed. If Jane\'s score is
        0.8 standard deviation above the mean, then how many, to the
        nearest unit, students scored above Jane?( include just the figure. No Prefix or suffix ;) )
</string>
    <string name="questionMathematics7">7. Solve for X and Y in this simultaneous equation: \n \n 4x - y = 3 \n \n 2x + 5y = 7 \n \n </string>
    <string name="answerMathematics7a">X = 2</string>
    <string name="answerMathematics7b">Y = 1</string>
    <string name="answerMathematics7c">Y = 2</string>
    <string name="answerMathematics7d">X = 1</string>
    <string name="questionMathematics8">8.The probability that an electronic
        device produced by a company does not function properly is
        equal to 0.1. If 10 devices are bought, then the probability,
        to the nearest thousandth, that 7 devices function properly is? ( include just the figure. No Prefix or suffix ;) ) </string>
    <string name="questionMathematics9">9.Two tyPes of triangles are? </string>
    <string name="answerMathematics9a">Translucent Triangle</string>
    <string name="answerMathematics9b">Obtuse Triangle </string>
    <string name="answerMathematics9c">Newton Triangle</string>
    <string name="answerMathematics9d">Scalene Triangle</string>
    <string name="questionMathematics10">10.  32 is 40% of what number?</string>
    <string name="ansMathematics1">The correct answer is 90</string>
    <string name="ansMathematics2">The correct answer is 6.4%</string>
    <string name="ansMathematics3">The correct answer is 0.4</string>
    <string name="ansMathematics4">The correct answer is 2100</string>
    <string name="ansMathematics5">The correct answers are 180 and 360 only </string>
    <string name="ansMathematics6">The correct answer is 106 </string>
    <string name="ansMathematics7">The correct answers are Y = 1, and X = 1 </string>
    <string name="ansMathematics8">The correct answer is 0.057</string>
    <string name="ansMathematics9">The correct answers are Obtuse and  Scalene Triangles </string>
    <string name="ansMathematics10"> The correct answer is 80</string>
    <string name="englishTitle">English Quiz</string>
</resources>