<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutMe">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="310dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@color/category_chemistry">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/myself"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/myself"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tweets"
                        android:textColor="@color/colorPrimaryDark"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_tweets"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/colorPrimaryDark"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/number_of_following"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@color/colorPrimaryDark"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_followers"
                        android:textColor="@color/colorPrimary"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="0dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mail"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/website"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/country"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="0dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/phone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/phone"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>
</LinearLayout>
